infrastructure/kubernetes/dev/dev-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prisma
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: prisma-frontend
        #image: jonvdb/prisma-frontend-test:dd-rum
        image: jonvdb/prisma_frontend:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
