infrastructure/kubernetes/dev/dev-prisma-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prisma-service
  namespace: prisma
  labels:
    app: backend-prisma-service
    tags.datadoghq.com/env: "ENV_test"
    tags.datadoghq.com/service: "SVC_prisma-service"
    tags.datadoghq.com/version: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-prisma-service
  template:
    metadata:
      labels:
        app: backend-prisma-service
        tags.datadoghq.com/env: "ENV_test"
        tags.datadoghq.com/service: "SVC_prisma-service"
        tags.datadoghq.com/version: ""
    spec:


      #Datadog volume
      volumes:
      - hostPath:
          path: /var/run/datadog/
        name: apmsocketpath
      

      containers:
      - name: prisma-backend-prisma-service
      # IMAGE TAG AANPASSEN na merge en conflictoplossing + API URL als ENV!!! #test verwijderen op DockerHub.
        image: jonvdb/prisma-service:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
        

        #Datadog Volume Mount
        volumeMounts:
          - name: apmsocketpath
            mountPath: /var/run/datadog
