infrastructure/kubernetes/dev/dev-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: prisma
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: prisma-db
        image: mysql:8.0.17
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        # env:
        # - name: MYSQL_ROOT_PASSWORD
        #   value: prisma2password
        # - name: MYSQL_DATABASE
        #   value: prisma-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: prisma
spec:
  selector:
    app: db
  ports:
  - port: 3308
    targetPort: 3306
