infrastructure/kubernetes/dev/dev-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prisma
spec:
  selector:
    app: frontend
  ports:
  - port: 4200
    targetPort: 4200
