infrastructure/kubernetes/dev/dev-prisma-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-prisma-service
  namespace: prisma
spec:
  selector:
    app: backend-prisma-service
  ports:
    - port: 7000
      targetPort: 7000
  type: LoadBalancer
