infrastructure/kubernetes/dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prisma-ingress
  namespace: prisma
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #ingress.kubernetes.io/ssl-redirect: "false"
    #traefik.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.pxl-prisma.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 4200
